main/default/objects/Pricing_Agreement__c/Pricing_Agreement__c.object-meta.xml
<CustomObject>
    <label>Wholesale Pricing Agreement</label>
    <nameField>
        <label>Pricing Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesale Pricing Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>