main/default/objects/Pricing_Agreement__c/fields/Contract_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signed By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>The name entered in this field should be a Contact from the Account. If you need to select another Contact, click &quot;Show all results&quot;.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wholesale Pricing Agreements</relationshipLabel>
    <relationshipName>Pricing_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>