main/default/objects/Pricing_Agreement__c/fields/InternalSigner__c.field-meta.xml
<CustomField>
    <fullName>InternalSigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Signal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contracts may only be counter-signed by: James Robak</errorMessage>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>jroba</value>
        </filterItems>
        <infoMessage>Contracts may only be counter-signed by: James Robak</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Wholesale_Pricing_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>