main/default/objects/Pricing_Agreement__c/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once Contract Signed Date is entered, this record will be locked</description>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>