main/default/objects/Pricing_Agreement__c/validationRules/Contract_Signed_By_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Signed_By_Required</fullName>
    <active>true</active>
    <description>Contract signed by is a mandatory field in order to populate contract signed date</description>
    <errorConditionFormula>AND( ISBLANK( Contract_Signed_By__c ), NOT( ISBLANK( Contract_Signed_Date__c ) ))</errorConditionFormula>
    <errorDisplayField>Contract_Signed_By__c</errorDisplayField>
    <errorMessage>Please enter Contract Signed By.</errorMessage>
</ValidationRule>